fix alignment + add jump to contact button

--- a/main.css
+++ b/main.css
@@ -48,6 +48,18 @@ html {
         background-color:#585858;
         padding:5px;
     }
+      #jumpCont{
+        bottom:15px;
+        right:0;
+        position:fixed;
+        margin-right:150px;
+        border:#ffffff solid 3px;
+        background-color:#585858;
+        padding:5px;
+    }
+    #jumpCont h4:hover{
+        color:#ff67c5;
+    }
     #nameBLeft{
         bottom:0;
         left:0;
@@ -146,11 +158,21 @@ html {
       }
       #contact h4{
         position:relative;
-        margin-left:-50px;
         display:block;
+      }
+      #contact .social {
+        text-decoration-line: underline;
+        text-decoration-color:white;
+      }
+      #contact .social:hover{
+        text-decoration-color:#ff67c5;
       }
       #contact a h4:hover{
         color:#ff67c5;
+      }
+      #contact ul{
+        list-style:none;
+        padding-left:0;
       }
       .item:hover{
         color:#ff67c5;
